--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ html,body,div{
    background-color: red;
 }
 
-
 .floatLeft{
     float:left;
 }
@@ -36,15 +35,28 @@ html,body,div{
     background-color: red;
 }
 
+#content div .blues{
+    margin-top: 2px;
+}
+
 .greens {
     display: flex;
     justify-content: space-around;
-    background-color: rgb(19, 38, 19);
+    background-color: rgb(26, 53, 26);
     height: 150px;
     border: 10px;
     border-collapse: separate;
     border-spacing: 15px;
     border-color: #dbff4a;
+}
+
+.greens div {
+    background-color: rgb(28, 128, 28);
+    width: 25%;
+    text-align: center;
+    height: 90px;
+    margin-right: auto;
+    margin-top: 25px;
 }
 
 .blues {
@@ -62,7 +74,7 @@ html,body,div{
     background-color: yellow;
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
+    flex-direction: column-reverse;
     text-align: center;
     height: 250px;
     width: 1259px;
@@ -97,6 +109,15 @@ html,body,div{
 #footer {
     display: flex;
     justify-content: space-around;
-    background-color: purple;
+    background-color: red;
     height: 100px;
+}
+
+#footer div {
+    background-color: purple;
+    width: 25%;
+    height: 100px;
+    text-align: center;
+    margin-right: auto;
+    
 }
